fix: Fixes #29 so open sidebar doesn't overlap content

--- a/custom/custom.css
+++ b/custom/custom.css
@@ -34,7 +34,6 @@ body {
     padding-left: 10px;
     padding-top: 0px;
     height: 100vh;
-    left: 200px;
 }
 
 /* Clear floats after the columns */
